--- a/app/views/layouts/active_admin_logged_out.html.erb
+++ b/app/views/layouts/active_admin_logged_out.html.erb
@@ -6,13 +6,13 @@
   <title><%= [@page_title, render_or_call_method_or_proc_on(self, ActiveAdmin.application.site_title)].compact.join(" | ") %></title>
 
   <% ActiveAdmin.application.stylesheets.each do |style, options| %>
-    <%= stylesheet_link_tag style, options %>
+    <%= stylesheet_link_tag style, options.merge(ActiveAdmin::Dependency.rails.skip_pipeline) %>
   <% end %>
   <% ActiveAdmin.application.javascripts.each do |path| %>
-    <%= javascript_include_tag path %>
+    <%= javascript_include_tag path, ActiveAdmin::Dependency.rails.skip_pipeline %>
   <% end %>
 
-  <%= favicon_link_tag ActiveAdmin.application.favicon if ActiveAdmin.application.favicon %>
+  <%= favicon_link_tag(ActiveAdmin.application.favicon, ActiveAdmin::Dependency.rails.skip_pipeline) if ActiveAdmin.application.favicon %>
 
   <% ActiveAdmin.application.meta_tags_for_logged_out_pages.each do |name, content| %>
     <%= tag(:meta, name: name, content: content) %>
